--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body{
     background-color: rgba(82, 50, 8, 0.6);
-    background: linear-gradient(to top, rgba(82, 50, 8, 0.6), rgba(255, 165, 0, 0.6));
+    background: linear-gradient(to left,black,white, black);
 }
 
 .container{
@@ -28,13 +28,15 @@ body{
     text-align: center;
     height: 100px;
     border-radius: 25px;
-    background-color: rgb(0, 0, 0,0.5);
+    background-color: rgb(0, 0, 0,0.2);
     display: flex;
     justify-content: center;
     align-items: center;
 
     & h1{
-        color: white;
+        color: linear-gradient(to left,black,white, black);
+        background-color: linear-gradient(to left,black,white, black);
+        text-shadow: 1px 2px 3px white;
         font-size: 50px;
     }
 
@@ -50,7 +52,8 @@ body{
     background-color: rgb(0, 0, 0,0.2);
 
     border-radius: 50px;
-    box-shadow: black 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+    box-shadow: black 0px 1px 5px 5px;
     /* box-shadow: 1px 2px 3px rgb(0, 255, 234); */
 }
 
@@ -59,6 +62,7 @@ iframe{
     width: 100%;
     height: 100%;
     border-radius: 50px;
-    box-shadow: white 0px 5px 15px;
+    box-shadow: white 0px -1px 5px 1px;
+    /* box-shadow: white 0px 5px 15px; */
     /* box-shadow:  0px 3px 8px; */
 }
